--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Hello Cousera"</title>
 </head>
 <body>
-<h1>Hello Coursera! </h1>
+<h1>Hello Coursera! It'a greater course</h1>
 
 </body>
 </html>
